# slugger

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  constraints-ci.txt  pyproject.toml  slugger-generated-demos-README.md
.github/: CODEOWNERS  pull_request_template.md
agents/: README.md  __init__.py  backend_engineer.md  base.py  business_analyst.md  devops_engineer.md  frontend_engineer.md  messaging.py  product_owner.md  project_manager.md  qa_engineer.md  registry.py  security_engineer.md  solution_architect.md  technical_writer.md
artifacts/: README.md
benchmarks/: suite.py
cli/: __init__.py  main.py
config/: README.md  __init__.py  defaults.yaml  loader.py  profiles.py  schema.yaml  secrets.py  secrets.yaml.example  settings.py
consulting/: README.md
core/: README.md  __init__.py  capability.py  contracts.py  exceptions.py  interfaces.py  registry.py
docker/: mvp-verifier.Dockerfile
docs/: Architecture.md  CodingGuidelines.md  Coding_Agent.md  Deployment_Agent.md  DevelopmentStandards.md  Documentation_Agent.md  Infrastructure.md  Pipeline_Agents.md  Planning_Agent.md  Providers.md  Providers_Orchestrator.md  README.md  Requirements.md  Testing_Agent.md  Vision.md  agent-specification.md  ai-sdlc-spec.md  architecture.md  codex-demo.md  consulting-playbook-migration-plan.md  domain-model.md  generator.py  issue-to-codex-bridge.md  mvp-certification.md  mvp-merge-governance.md  mvp-release-checklist.md  mvp.md  production-readiness.md  workflow-dsl.md
examples/: README.md
knowledge/: README.md  indexer.py  standards.py
logs/: README.md
materializer/: __init__.py  build_runner.py  workspace.py
memory/: README.md  __init__.py  agent_memory.py  base.py  file_memory.py  in_memory.py  memory_manager.py  models.py
metrics/: README.md
models/: README.md  __init__.py  agent.py  app_manifest.py  artifact.py  artifact_lineage.py  artifact_store.py  artifact_store_sqlite.py  artifact_version.py  execution.py  manifest.py  project.py  provider.py  workflow.py
mvp/: __init__.py  basic_runner.py  build_service.py  container_runner.py  inventory_manifest.py  issue_bridge.py  models.py  project_validator.py  prompt_renderer.py  run_repository.py  runtime_paths.py  verification_service.py  verify_cli.py  workspace.py
observability/: README.md  __init__.py  collector.py  cost_tracker.py  dashboard.py  logger.py  models.py  reporter.py  telemetry.py  token_budget.py  tracer.py
orchestrator/: README.md  __init__.py  bootstrap.py  context.py  orchestrator.py
plugins/: README.md  __init__.py  base.py  loader.py  metadata.py  packaging.py  registry.py  sdk.py
prompts/: README.md  catalog.py  lifecycle.py
(+526 files in other folders)
