[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slugger"
version = "0.1.0"
description = "Slugger AI Software Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.31.0",
]

[project.scripts]
slugger = "cli.main:main"

[tool.setuptools.packages.find]
include = [
  "agents*", "cli*", "config*", "core*", "memory*", "models*", "observability*", "orchestrator*",
  "plugins*", "providers*", "services*", "state_machine*", "validators*", "workflow*"
]
