[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slugger"
version = "0.1.0"
description = "Slugger AI Software Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.1.1",
]

[project.scripts]
slugger = "cli.main:main"

[tool.setuptools.packages.find]
include = [
  "agents*", "benchmarks*", "cli*", "config*", "core*", "docs*", "knowledge*",
  "memory*", "models*", "observability*", "orchestrator*",
  "plugins*", "providers*", "scripts*", "services*", "state_machine*", "validators*", "workflow*"
]
