[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slugger"
version = "0.1.2"
description = "Slugger AI Software Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.1",
  "ruff>=0.4.0",
  "build>=1.0.0",
  "mypy>=1.11.0",
]

[project.scripts]
slugger = "cli.main:main"

[tool.setuptools.packages.find]
include = [
  "agents*", "benchmarks*", "cli*", "config*", "core*", "docs*", "knowledge*",
  "materializer*", "memory*", "models*", "observability*", "orchestrator*",
  "mvp*", "plugins*", "prompts*", "providers*", "scripts*", "services*", "state_machine*",
  "validators*", "workflow*"
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.json", "*.txt"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
markers = [
  "real_codex: manually gated tests that invoke the real Codex CLI",
  "docker: tests that require a local Docker daemon",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/"]



[[tool.mypy.overrides]]
module = [
  "providers.*",
  "services.*",
  "config.*",
  "workflow.*",
]
ignore_errors = true
ignore_missing_imports = true
